PO-1902-Search-Minor-Creditors-POST
fixing tests